<resources>
    <string name="app_name">SMART</string>
    <string name="child_Name">Name_Lastname</string>
    <string name="child_age">Age</string>
    <string name="child_province">Location</string>
    <string name="child_school">School</string>
    <string name="time">45</string>
    <string name="question_title">Pregunta</string>
    <string name="question">statement</string>
    <string name="option_answ">option</string>
    <string name="Start">Iniciar</string>
    <string name="Category">Escoge un tema </string>
    <string name="Child">Seleccionar jugador</string>
    <string name="title_activity_login">Inicio de Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El correo es inválido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_incorrect_username">Inicio de sesión ha fallado</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings1">Settings</string>
    <!-- Example settings for Notifications -->
    <string name="title_activity__settings">Configuración</string>
    <string name="sounds_activity_settings">Reproducir Sonido en Juego</string>
    <string name="kidSelect_activity_settings">Cambiar niño encuestado</string>
    <string name="logOut_activity_settings">Cerrar Sesión</string>
    <string name="next_question">OK</string>
</resources>
