<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/child_Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_año"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_age"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView_escuela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_school"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView_provincia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_province"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>