<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="196dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/child_Name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:fontFamily="casual"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_age"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/textView_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_school"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:fontFamily="casual"/>
        <TextView
            android:id="@+id/textView_located"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_province"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:fontFamily="casual"/>
    </LinearLayout>
</LinearLayout>