<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/rainbow">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_title"
            android:textSize="36sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"/>


        <ImageButton
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/title"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/title"
            android:layout_marginEnd="17dp"
            android:background="@color/transparent"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </RelativeLayout>

    <TextView
       android:id="@+id/statement"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="30dp"
       android:layout_marginTop="25dp"
       android:layout_marginLeft="11dp"
       android:text="@string/question"
       android:textSize="25sp"
        android:fontFamily="casual"/>


    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2">

        <RadioButton
            android:id="@+id/opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:checked="false"
            android:fontFamily="casual"
            android:onClick="onRadioButtonClicked"
            android:text="@string/option_answ"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:text="@string/option_answ"
            android:textSize="18dp"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:fontFamily="casual"/>

        <RadioButton
            android:id="@+id/opcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:text="@string/option_answ"
            android:textSize="18dp"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:fontFamily="casual"/>

        <RadioButton
            android:id="@+id/opcion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:text="@string/option_answ"
            android:textSize="18dp"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:fontFamily="casual"/>

    </RadioGroup>

    <cn.iwgang.countdownview.CountdownView
       android:id="@+id/time"
       android:layout_width="wrap_content"
       android:layout_height="62dp"
       android:layout_gravity="center"
       android:layout_marginTop="100dp"
       app:isHideTimeBackground="false"
       app:isShowDay="false"
       app:isShowHour="false"
       app:isShowMillisecond="false"
       app:isShowMinute="false"
       app:isShowSecond="true"
       app:timeBgColor="@color/vainilla"
       app:timeBgDivisionLineSize="0dp"
       app:timeBgRadius="50dp"
       app:timeBgSize="100dp"
       app:timeTextColor="@color/gray"
       app:timeTextSize="40dp" />

</LinearLayout>